# Ebac-python-project

./: .gitignore  .http  Dockerfile  README.md  build_files.sh  docker-compose.yml  env.dev  pyproject.toml  pytest.ini  requeriments.txt  requirements.txt  vercel.json
.github/workflows/: build.yml
order/: factories.py  urls.py
order/serializers/: order_serializers.py
order/test/test_viewset/: test_order_viewset.py
order/viewset/: order_viewset.py
product/: urls.py
product/models/: products.py
product/serializers/: category_serializers.py  products_serializers.py
product/test/tests_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewset/: category_viewset.py  product_viewset.py
restapp/: settings.py  urls.py  views.py  wsgi.py
restapp/templates/: hello_world.html
tests/models/: __init__.py  test_models.py
